--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@600&family=Roboto+Mono:wght@700&display=swap"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="./assets/habits.png" type="image/x-icon" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -18,215 +19,27 @@
       <img src="./assets/logo.svg" alt="Logo" />
       <button>
         <img src="./assets/icon_button.svg" alt="IconeButton" />
-        Registrar o meu dia
+        <div>Registrar o meu dia</div>
       </button>
     </header>
 
     <form>
       <div class="habits">
-        <div class="habit">💧</div>
-        <div class="habit">💪🏽</div>
-        <div class="habit">🏃🏽‍♂️</div>
-        <div class="habit">🚴🏽‍♀️</div>
-        <div class="habit">🧠</div>
-        <div class="habit">🙏🏽</div>
-        <div class="habit">📕</div>
-        <div class="habit">⚽</div>
-        <div class="habit">💑</div>
+        <div class="habit" data-name="water">💧</div>
+        <div class="habit" data-name="bodybuilding">💪🏽</div>
+        <div class="habit" data-name="run">🏃🏽‍♂️</div>
+        <div class="habit" data-name="bike">🚴🏽‍♀️</div>
+        <div class="habit" data-name="study">🧠</div>
+        <div class="habit" data-name="pray">🙏🏽</div>
+        <div class="habit" data-name="read">📕</div>
+        <div class="habit" data-name="soccer">⚽</div>
+        <div class="habit" data-name="flirt">💑</div>
       </div>
 
       <div class="days">
-        <div class="day">
-          <div>17/01</div>
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-        </div>
-
-        <div class="day">
-          <div>18/01</div>
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-        </div>
-
-        <div class="day">
-          <div>19/01</div>
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-        </div>
-
-        <div class="day">
-          <div>20/01</div>
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-        </div>
-
-        <div class="day">
-          <div>21/01</div>
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-        </div>
-
-        <div class="day">
-          <div>22/01</div>
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-        </div>
-
-        <div class="day">
-          <div>23/01</div>
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-        </div>
-
-        <div class="day">
-          <div>24/01</div>
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-        </div>
-
-        <div class="day">
-          <div>25/01</div>
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-        </div>
-
-        <div class="day">
-          <div>26/01</div>
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-        </div>
-
-        <div class="day">
-          <div>27/01</div>
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-        </div>
-
-        <div class="day">
-          <div>28/01</div>
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-        </div>
-        
-        <div class="day">
-          <div>29/01</div>
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-          <input type="checkbox" />
-        </div>
-        <!--
-          <div class="day">
-            <div>30/01</div>
-            <input type="checkbox" />
-            <input type="checkbox" />
-            <input type="checkbox" />
-            <input type="checkbox" />
-            <input type="checkbox" />
-            <input type="checkbox" />
-            <input type="checkbox" />
-          </div>
-          <div class="day">
-            <div>31/01</div>
-            <input type="checkbox" />
-            <input type="checkbox" />
-            <input type="checkbox" />
-            <input type="checkbox" />
-            <input type="checkbox" />
-            <input type="checkbox" />
-            <input type="checkbox" />
-          </div>
-          -->
       </div>
     </form>
+    <script src="https://cdn.jsdelivr.net/gh/maykbrito/libs/NLWSetup/source/NLWSetup.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
